[package]
name = "emunet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14.3"
dotenvy = "0.15.7"
qdrant-client = "1.5.0"
reedline-repl-rs = { version = "1.0.7", features = ["async"] }
tokio = { version = "1.32.0", features = ["full"] }
